Polish: documentation, packaging, and README overhaul
README.md — complete rewrite:
  - Centered header with navigation links
  - What-is-this pitch paragraph
  - Installation: npm, try-without-installing, development mode
  - Quick start: agent dispatch, TDD enforcement, SDD workflow
  - Feature deep-dives with tables and diagrams
  - Agent table with emoji icons and model info
  - Commands and prompt templates reference
  - Configuration quick reference
  - Architecture diagram
  - Documentation index

docs/guides/ — 5 detailed guides:
  - agents.md: all built-in agents, custom agents, model config, isolation
  - tdd-guard.md: enforcement mechanics, file mapping, modes, escape hatches
  - sdd-workflow.md: plan format, pipeline diagram, review cycle, escalation
  - configuration.md: full .superteam.json reference with all options
  - rules.md: how rules work, built-in rules, custom rules

Packaging:
  - LICENSE (MIT)
  - .npmignore (excludes docs/plans/, .superteam.json, editor files)
  - package.json: repository, homepage, bugs, author, engines, files, keywords
  - CONTRIBUTING.md: dev setup, project structure, PR guidelines
  - CHANGELOG.md: v0.1.0 release notes

npm pack produces: pi-superteam-0.1.0.tgz (48.6 kB, 37 files)

Installation methods:
  pi install npm:pi-superteam        # from npm
  pi install git:github.com/coctostan/pi-superteam  # from git
  pi -e npm:pi-superteam             # try without installing
  pi -e ./src/index.ts               # development mode

--- a/package.json
+++ b/package.json
@@ -1,10 +1,43 @@
 {
   "name": "pi-superteam",
   "version": "0.1.0",
-  "description": "Pi extension: TDD/ATDD enforcement, specialized agent dispatch, iterative review cycles, context-aware rules",
-  "keywords": ["pi-package"],
+  "description": "Multi-agent orchestration, TDD enforcement, iterative review cycles, and context-aware rules for pi",
+  "keywords": [
+    "pi-package",
+    "tdd",
+    "atdd",
+    "code-review",
+    "multi-agent",
+    "subagent",
+    "testing",
+    "developer-tools"
+  ],
   "license": "MIT",
+  "author": "coctostan",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/coctostan/pi-superteam.git"
+  },
+  "homepage": "https://github.com/coctostan/pi-superteam#readme",
+  "bugs": {
+    "url": "https://github.com/coctostan/pi-superteam/issues"
+  },
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "files": [
+    "src/",
+    "agents/",
+    "skills/",
+    "rules/",
+    "prompts/",
+    "docs/guides/",
+    "CHANGELOG.md",
+    "CONTRIBUTING.md",
+    "README.md",
+    "LICENSE"
+  ],
   "pi": {
     "extensions": ["src/index.ts"],
     "skills": ["skills"],
