--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pi-superteam",
-  "version": "0.3.0",
-  "description": "Multi-agent orchestration, TDD enforcement, iterative review cycles, and context-aware rules for pi",
+  "version": "0.3.1",
+  "description": "DEPRECATED (sunset): multi-agent orchestration, TDD enforcement, iterative review cycles, and context-aware rules for pi",
   "keywords": [
     "pi-package",
     "tdd",
@@ -10,7 +10,10 @@
     "multi-agent",
     "subagent",
     "testing",
-    "developer-tools"
+    "developer-tools",
+    "deprecated",
+    "unmaintained",
+    "sunset"
   ],
   "license": "MIT",
   "author": "coctostan",
@@ -36,6 +39,7 @@
     "CHANGELOG.md",
     "CONTRIBUTING.md",
     "README.md",
+    "DEPRECATED.md",
     "LICENSE"
   ],
   "pi": {
